@@ -1,3 +1,10 @@
+2006-10-25  OHASHI Akira  <bg66@koka-in.org>
+
+	* mixi.el (mixi-retrieve-function): Use `radio' instead of `choice'.
+	(mixi-default-email): Ditto.
+	(mixi-default-password): Ditto.
+	(mixi-cache-expires): Ditto.
+
 2006-10-25  Daiki Ueno  <ueno@unixuser.org>
 
 	* mixi.el (mixi-time-less-p): Normalize encoded time.
